kubernetes/app-k8s.yml

apiVersion: v1
kind: Service
metadata:
  name: microapi

  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"my-backend-config"}}'
spec:
  type: NodePort
  selector:
    app: microapi
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  backend:
    serviceName: microapi
    servicePort: 3000
  # rules:
  # - http:
  #     paths:
  #     - path: /*
  #       backend:
  #         serviceName: microapi
  #         servicePort: 3000
  # #     - path: /discounted
  #       backend:
  #         serviceName: my-discounted-products
  #         servicePort: 80

# apiVersion: extensions/v1beta1
# kind: HorizontalPodAutoscaler
# metadata:
#   name: microapi
#   namespace: default
# spec:
#   scaleRef:
#     kind: ReplicationController
#     name: microapi
#     namespace: default
#   minReplicas: 5
#   maxReplicas: 100
#   cpuUtilization:
#     targetPercentage: 50
