kubernetes/ingress-fuck-kubernetes-provider.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microapi-ingress
spec:
  backend:
    serviceName: microapi
    servicePort: 3000
